--- a/README
+++ b/README
@@ -4,16 +4,16 @@ package passwordhash
 
 Package passwordhash implements safe password hashing and comparison.
 
-Passwords are derived using PBKDF2 function with 5000 iterations (by default),
+Passwords are derived using PBKDF2-SHA256 function with 5000 iterations (by default),
 with 32-byte salt and 64-byte output.
 
 
 CONSTANTS
 
 const (
-    // Default number of iterations for PBKDF2.
+    // Default number of iterations for PBKDF2
     DefaultIterations = 5000
-    // Default salt length.
+    // Default salt length
     SaltLen = 32
 )
 
@@ -21,9 +21,9 @@ const (
 TYPES
 
 type PasswordHash struct {
-    Iterations int
-    Salt       []byte
-    Hash       []byte
+    Iter int
+    Salt []byte
+    Hash []byte
 }
 
 PasswordHash represents storage for password hash and salt.
@@ -33,14 +33,14 @@ func New(password string) *PasswordHash
 New returns a new password hash derived from the provided password,
 a random salt, and the default number of iterations.
 
-func NewWithIterations(password string, iterations int) *PasswordHash
+func NewIter(password string, iter int) *PasswordHash
 
-NewWithIterations returns a new password hash derived from the provided
-password, number of iterations, and a random salt.
+NewIter returns a new password hash derived from the provided password,
+the number of iterations, and a random salt.
 
-func NewWithSaltIterations(password string, salt []byte, iterations int) *PasswordHash
+func NewSaltIter(password string, salt []byte, iter int) *PasswordHash
 
-NewWithSaltIterations creates a new password hash from the provided password, salt,
+NewSaltIter creates a new password hash from the provided password, salt,
 and the number of iterations.
 
 func (ph *PasswordHash) EqualToPassword(password string) bool
@@ -51,7 +51,6 @@ This function uses constant time comparison.
 func (ph *PasswordHash) String() string
 
 String returns a string representation of the password hash.
-
 
 EXAMPLE
 
