--- a/README
+++ b/README
@@ -4,8 +4,9 @@ package passwordhash
 
 Package passwordhash implements safe password hashing and comparison.
 
-Passwords are derived using PBKDF2-SHA256 function with 5000 iterations (by default),
-with 32-byte salt and 64-byte output.
+Passwords are derived using PBKDF2-HMAC-SHA256 function with 5000 iterations
+(by default), 32-byte salt and 64-byte output.
+
 
 
 CONSTANTS
