Update README. Update example.

--- a/README
+++ b/README
@@ -1,12 +1,25 @@
 PACKAGE
 
 package passwordhash
+import "github.com/dchest/passwordhash"
 
 Package passwordhash implements safe password hashing and comparison.
 
 Passwords are derived using PBKDF2-HMAC-SHA256 function with 5000 iterations
 (by default), 32-byte salt and 64-byte output.
 
+Note: you must not allow users to change parameters of PasswordHash, such as
+the number of iterations, directly. If a malicious user can change the
+number of iterations, he can set it too high, and it will lead to DoS.
+
+Example usage:
+
+	ph := passwordhash.New("hello, world")
+	// Store ph somewhere...
+	// Later, when user provides a password:
+	if ph.EqualToPassword("hello, world") {
+		// Password's okay, user authorized...
+	}
 
 
 CONSTANTS
@@ -16,6 +29,8 @@ const (
     DefaultIterations = 5000
     // Default salt length
     SaltLen = 32
+    // Default hash length
+    HashLen = 64
 )
 
 
@@ -26,18 +41,19 @@ type PasswordHash struct {
     Salt []byte
     Hash []byte
 }
-
 PasswordHash stores hash, salt, and number of iterations.
 
 func New(password string) *PasswordHash
 
 New returns a new password hash derived from the provided password,
 a random salt, and the default number of iterations.
+The function causes runtime panic if it fails to get random salt.
 
 func NewIter(password string, iter int) *PasswordHash
 
 NewIter returns a new password hash derived from the provided password,
 the number of iterations, and a random salt.
+The function causes runtime panic if it fails to get random salt.
 
 func NewSaltIter(password string, salt []byte, iter int) *PasswordHash
 
@@ -52,15 +68,6 @@ This function uses constant time comparison.
 func (ph *PasswordHash) String() string
 
 String returns a string representation of the password hash.
-
-EXAMPLE
-
-	ph := New("hello, world")
-	// Store ph somewhere...
-	// Later, when user provides a password:
-	if ph.EqualToPassword("hello, world") {
-		// Password's okay, user authorized...
-	}
 
 
 NOTES
